--- a/form.html
+++ b/form.html
@@ -320,7 +320,7 @@ document.getElementById("faqForm").addEventListener("submit", async function (e)
 });
 
 function submitForm(formData, brand) {
-  const googleFormUrl = https://docs.google.com/forms/d/e/1FAIpQLScp_iGY8XiBYYiZ9K-I6jPN3AEXpoYJM_cjMOt52OQyQyLTuQ/formResponse"; // Default
+  const googleFormUrl = "https://docs.google.com/forms/d/e/1FAIpQLScp_iGY8XiBYYiZ9K-I6jPN3AEXpoYJM_cjMOt52OQyQyLTuQ/formResponse"; // Default
 
   fetch(googleFormUrl, {
     method: "POST",
