--- a/form.html
+++ b/form.html
@@ -285,39 +285,43 @@ document.getElementById("faqForm").addEventListener("submit", async function (e)
   const googleFormUrl =
     "https://docs.google.com/forms/d/e/1FAIpQLScp_iGY8XiBYYiZ9K-I6jPN3AEXpoYJM_cjMOt52OQyQyLTuQ/formResponse";
   
-const formData = new FormData();
-formData.append("filedata", base64Data);   // hasil base64 dari file
-formData.append("filename", file.name);    // nama file asli
-formData.append("mimetype", file.type);    // mimetype file
-formData.append("nama", namaCustomer);     // dari input form
+// Di dalam event listener 'submit':
+if (fileUpload.length > 0) {
+  const file = fileUpload[0];
+  const reader = new FileReader();
 
-const response = await fetch("https://script.google.com/macros/s/AKfycbxAMJsrCrSR2JalkACK6ZHFunyyeSvpByx0EZ513J1McYYgGjnq6iAOwxIOpgyxvQ80_Q/exec", {
-  method: "POST",
-  body: formData
-});
-        let uploadJson;
-        try {
-          uploadJson = await uploadRes.json();
-        } catch (err) {
-          Swal.fire("Error", "Gagal parsing respons upload: " + err.message, "error");
-          return;
-        }
+  reader.onload = async function () {
+    const base64Data = reader.result.split(",")[1];
 
-        if (uploadJson.status === "success") {
-          formData.append("entry.1858080700", uploadJson.url);
-          submitForm(formData, googleFormUrl);
-        } else {
-          Swal.fire("Error", "Upload gagal: " + uploadJson.message, "error");
-        }
-      } catch (error) {
-        Swal.fire("Error", "Upload error: " + error.message, "error");
+    const formDataUpload = new FormData();
+    formDataUpload.append("filedata", base64Data);
+    formDataUpload.append("filename", file.name);
+    formDataUpload.append("mimetype", file.type);
+    formDataUpload.append("nama", NCust);
+
+    try {
+      const response = await fetch("https://script.google.com/macros/s/AKfycbxAMJsrCrSR2JalkACK6ZHFunyyeSvpByx0EZ513J1McYYgGjnq6iAOwxIOpgyxvQ80_Q/exec", {
+        method: "POST",
+        body: formDataUpload,
+      });
+
+      const result = await response.json();
+      if (result.status === "success") {
+        formData.append("entry.1858080700", result.url);
+        submitForm(formData, googleFormUrl);
+      } else {
+        Swal.fire("Gagal", "Upload gagal: " + result.message, "error");
       }
-    };
+    } catch (error) {
+      Swal.fire("Gagal", "Upload error: " + error.message, "error");
+    }
+  };
 
-    reader.readAsDataURL(file);
-  } else {
-    submitForm(formData, googleFormUrl);
-  }
+  reader.readAsDataURL(file);
+} else {
+  submitForm(formData, googleFormUrl);
+}
+
 });
 
 function submitForm(formData, googleFormUrl) {
